--- a/diamondjourney.html
+++ b/diamondjourney.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chirag - Sign in</title>
+    <title>Chirag - Diamond Journey</title>
 
     <!-- fontawsome  -->
     <script src="https://kit.fontawesome.com/a16f8ee6e2.js" crossorigin="anonymous"></script>
@@ -111,60 +111,48 @@
         </div>
     </div>
 
-
-    <div class="container mt-5 mb-5">
-        <div class="all-Img-Btn text-center">
-            <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
-            <div class="allimgBtnbox">
-                <p class="wishlistHead">Sign in</p>
+    <div class="container diamondUpper">
+        <div class="diamondLogo text-center mt-5 mb-4">
+            <img src="img/other/heading.png" class="img-fluid">
+        </div>
+        <div class="diamondLargeTxt text-center txtFadedAll">
+            <p class="fs-2">The journey of billion-year-old diamonds from mines to you</p>
+        </div>
+        <div class="row mb-5">
+            <div class="col-lg-2 col-md-1 col-sm-12"></div>
+            <div class="col-lg-8 col-md-10 col-sm-12">
+                <p class="txtFadedAll diamondSmlTxt text-center">At Chirag Jewellers - founded in 1972 by the Late
+                    Rameshchandra Shah - we choose the
+                    best diamonds that reflect your
+                    enigma. Our master craftsmen meticulously carve each piece of diamond with a precision matching the
+                    standards of excellence.
+                    Each jewellery we craft is a mark of quality & honesty. It is no wonder then that today Chirag
+                    Jewellers
+                    has emerged as the
+                    city's foremost authority on the subject of selecting and purchasing exquisite diamond jewellery.
+                </p>
             </div>
-            <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
+            <div class="col-lg-2 col-md-1 col-sm-12"></div>
         </div>
     </div>
 
-    <div class="container mb-5">
-        <div class="signUpIn">
-            <div class="signUpInContent">
-                <form>
-                    <div class="perSignUpIn mb-3">
-                        <div class="perSUpInTxt">
-                            Email / Mobile:
-                        </div>
-                        <div class="perInputSUpIn">
-                            <input type="text">
-                        </div>
-                    </div>
-                    <div class="perSignUpIn mb-3">
-                        <div class="perSUpInTxt">
-                            Password:
-                        </div>
-                        <div class="perInputSUpIn">
-                            <input type="text">
-                        </div>
-                    </div>
-                    <div class="sinUpBtn text-end">
-                        <button class="btns" type="submit" disabled="true">Sign in</button>
-                    </div>
-                </form>
-
-                <div class="alternateSignBox mt-5 text-center">
-                    <div class="altSigncontent">
-                        <span>
-                            <span class="txtFadedAll">
-                                New User 
-                            </span>
-                            <span class="signUpIn-sIn">
-                                <a href="./signup.html">
-                                    Sign up
-                                </a>
-                            </span>
-                            <span class="forgetPW">
-                                <a href="#">
-                                    Forgot Password?
-                                </a>
-                            </span>
-                        </span>
-                    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 col-sm-12 col-md-12">
+                <img src="img/other/image-1.png" class="img-fluid">
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12 diamondLeft_box">
+                <div class="diamondTxt-box smallPara-dimndBox">
+                    <p class="fs-2">
+                        Sorting <br>
+                        Rough <br>
+                        Diamonds
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12 diamondRight_box">
+                <div class="diamond-small-img">
+                    <img src="img/other/image-2.png" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -261,7 +249,6 @@
             </div>
         </div>
     </div>
-
     <div class="scrollTop" id="scrollTop" onclick="toTop()">
         <img src="img/top-1.png">
     </div>
@@ -278,6 +265,7 @@
             position ? headerImg2Js.style.display = 'block' : headerImg2Js.style.display = 'none';
 
         });
+
     </script>
 </body>
 
