--- a/ranisa.html
+++ b/ranisa.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chirag - Sign in</title>
+    <title>Chirag - Rani Sa</title>
 
     <!-- fontawsome  -->
     <script src="https://kit.fontawesome.com/a16f8ee6e2.js" crossorigin="anonymous"></script>
@@ -16,6 +16,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+    <!-- owlcursol  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+        integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+        integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- custom  -->
     <link rel="stylesheet" href="style.css">
@@ -104,71 +113,124 @@
             </div>
         </div>
     </div>
-
     <div class="loadingImgBox" id="loadingImgBox">
         <div class="loadingImg">
             <img src="img/other/wheel-animation.gif">
         </div>
     </div>
 
-
-    <div class="container mt-5 mb-5">
-        <div class="all-Img-Btn text-center">
-            <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
-            <div class="allimgBtnbox">
-                <p class="wishlistHead">Sign in</p>
-            </div>
-            <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
-        </div>
+    <div class="ring-banner">
+        <img src="img/other/raisana.png" class="img-fluid">
     </div>
 
-    <div class="container mb-5">
-        <div class="signUpIn">
-            <div class="signUpInContent">
-                <form>
-                    <div class="perSignUpIn mb-3">
-                        <div class="perSUpInTxt">
-                            Email / Mobile:
+    <section class="ranisaBack mb-5">
+        <div class="container">
+            <div class="row raniSaupeerRow">
+                <div class="col-lg-2 col-md-2 col-sm-12"></div>
+                <div class="col-lg-8 col-md-8 col-sm-12 text-center">
+                    <p class="txtFadedAll">
+                        Underpinned by our heritage, our curated collection of ethically sourced natural diamond rings
+                        have their own
+                        story to tell. Whether given with intent – from promise rings to eternity rings – or expression
+                        of individual spirit,
+                        a Chirag diamond ring ensures endures style that can be enjoyed for generations to come.
+                    </p>
+                </div>
+                <div class="col-lg-2 col-md-2 col-sm-12"></div>
+            </div>
+            <div class="row ranisaRow">
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                    <div class="ring-per-imags">
+                        <img src="img/other/rani-1.png" class="img-fluid">
+                    </div>
+                    <div class="ring-down-txt mt-2">
+                        <div class="ringTxt txtFadedAll">
+                            <p class="ringLrg-txt p-0 m-0">
+                                ARPEGGIA 18AB56O
+                            </p>
+                            <p class="ringSmml-txt p-0 m-0">Rs. 1,00,000</p>
                         </div>
-                        <div class="perInputSUpIn">
-                            <input type="text">
+                        <div class="ringWCIcon">
+                            <span class="ringWish"><img src="img/fav.png"></span>
+                            <span class="ringCart"><img src="img/cart.png"></span>
                         </div>
                     </div>
-                    <div class="perSignUpIn mb-3">
-                        <div class="perSUpInTxt">
-                            Password:
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                    <div class="ring-per-imags">
+                        <img src="img/other/rani-2.png" class="img-fluid">
+                    </div>
+                    <div class="ring-down-txt mt-2">
+                        <div class="ringTxt txtFadedAll">
+                            <p class="ringLrg-txt p-0 m-0">
+                                ARPEGGIA 18AB56O
+                            </p>
+                            <p class="ringSmml-txt p-0 m-0">Rs. 1,00,000</p>
                         </div>
-                        <div class="perInputSUpIn">
-                            <input type="text">
+                        <div class="ringWCIcon">
+                            <button class="btns">Request for price</button>
                         </div>
                     </div>
-                    <div class="sinUpBtn text-end">
-                        <button class="btns" type="submit" disabled="true">Sign in</button>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                    <div class="ring-per-imags">
+                        <img src="img/other/rani-3.png" class="img-fluid">
                     </div>
-                </form>
-
-                <div class="alternateSignBox mt-5 text-center">
-                    <div class="altSigncontent">
-                        <span>
-                            <span class="txtFadedAll">
-                                New User 
-                            </span>
-                            <span class="signUpIn-sIn">
-                                <a href="./signup.html">
-                                    Sign up
-                                </a>
-                            </span>
-                            <span class="forgetPW">
-                                <a href="#">
-                                    Forgot Password?
-                                </a>
-                            </span>
-                        </span>
+                    <div class="ring-down-txt mt-2">
+                        <div class="ringTxt txtFadedAll">
+                            <p class="ringLrg-txt p-0 m-0">
+                                ARPEGGIA 18AB56O
+                            </p>
+                            <p class="ringSmml-txt p-0 m-0">Rs. 1,00,000</p>
+                        </div>
+                        <div class="ringWCIcon">
+                            <span class="ringWish"><img src="img/fav.png"></span>
+                            <span class="ringCart"><img src="img/cart.png"></span>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
+
+    <section class="producySlider mt-5 mb-5 pt-5">
+        <div class="sliderHead text-center mb-5 mt-5">
+            <h2 class="allHeading">
+                Explore
+                <span class="sliderAlFnt">Categories</span>
+            </h2>
+        </div>
+        <div class="container">
+            <div class="sliderContent">
+                <div class="owl-carousel owl-theme s-content">
+                    <div class="item">
+                        <a href="#">
+                            <div class="prodImg">
+                                <img src="img/nacklace.png" alt="">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="item">
+                        <a href="#">
+                            <div class="prodImg">
+                                <img src="img/earrings.png" alt="">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="item">
+                        <a href="#">
+                            <div class="prodImg">
+                                <img src="img/Bracelet.png" alt="">
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="custom-btns-prev-slider sliderLRArr"><img src="img/left-arrow.png" alt=""></div>
+        <div class="custom-btns-next-slider sliderLRArr"><img src="img/right-arrow.png" alt=""></div>
+    </section>
+
 
     <div class="footer">
         <div class="footerCont pt-5 pb-5 container">
@@ -261,10 +323,16 @@
             </div>
         </div>
     </div>
-
     <div class="scrollTop" id="scrollTop" onclick="toTop()">
         <img src="img/top-1.png">
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+    integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+    integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <script src="logic.js"></script>
     <script>
         window.addEventListener('scroll', () => {
@@ -278,6 +346,33 @@
             position ? headerImg2Js.style.display = 'block' : headerImg2Js.style.display = 'none';
 
         });
+    </script>
+     <script>
+        var owl = $('.owl-carousel');
+        owl.owlCarousel({
+            loop: true,
+            margin: 10,
+            nav: false,
+            dots: false,
+            autoplay: true,
+            responsive: {
+                0: {
+                    items: 1
+                },
+                600: {
+                    items: 1
+                },
+                1000: {
+                    items: 3
+                }
+            }
+        })
+        $('.custom-btns-next-slider').click(function () {
+            owl.trigger('next.owl.carousel');
+        })
+        $('.custom-btns-prev-slider').click(function () {
+            owl.trigger('prev.owl.carousel', [300]);
+        })
     </script>
 </body>
 
